finalização calendario, inserção professores

--- a/professores.html
+++ b/professores.html
@@ -47,71 +47,37 @@
                             <div class="card">
                                 <div class="face face1">
                                     <div class="content">
-                                        <h2 class="cardOne">Professor 1</h2>
-                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                        <h2 class="cardOne">Professor efetivo</h2>
+                                        <hr>
+                                        <p class="cardOne">Especialista</p>
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>01</h2>
+                                    <h2>ANA PAULA DA SILVA</h2>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="face face1">
                                     <div class="content">
-                                        <h2 class="cardTwo">Professor 2</h2>
-                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                        <h2 class="cardTwo">Professor efetivo</h2>
+                                        <hr>
+                                        <p class="cardTwo">Especialista</p>
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>02</h2>
+                                    <h2>ANDREIA FREITAS</h2>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="face face1">
                                     <div class="content">
-                                        <h2 class="cardThree">Professor 3</h2>
-                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                        <h2 class="cardThree">Professor contratado</h2>
+                                        <hr>
+                                        <p class="cardThree">Especialista</p>
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>03</h2>
-                                </div>
-                            </div>
-                        </div>
-                    </section>
-                    <section>
-                        <div class="container">
-                            <div class="card">
-                                <div class="face face1">
-                                    <div class="content">
-                                        <h2 class="cardOne">Professor 4</h2>
-                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
-                                    </div>
-                                </div>
-                                <div class="face face2">
-                                    <h2>04</h2>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="face face1">
-                                    <div class="content">
-                                        <h2 class="cardTwo">Professor 5</h2>
-                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
-                                    </div>
-                                </div>
-                                <div class="face face2">
-                                    <h2>05</h2>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="face face1">
-                                    <div class="content">
-                                        <h2 class="cardThree">Professor 6</h2>
-                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
-                                    </div>
-                                </div>
-                                <div class="face face2">
-                                    <h2>06</h2>
+                                    <h2>CILENE CRISTINA RODRIGUES OBAN</h2>
                                 </div>
                             </div>
                         </div>
@@ -121,12 +87,53 @@
                             <div class="card">
                                 <div class="face face1">
                                     <div class="content">
-                                        <h2 class="cardOne">Professor 7</h2>
-                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                        <h2 class="cardOne">Professor efetivo</h2>
+                                        <hr>
+                                        <p class="cardOne">Especialista</p>
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>07</h2>
+                                    <h2>DENISE GONÇALVES BARROS</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor efetivo</h2>
+                                        <hr>
+                                        <p class="cardTwo">Especialista</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>FABIANA DIRCE DE FRANÇA</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor efetivo</h2>
+                                        <hr>
+                                        <p class="cardThree">Especialista</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>GISELE DAS NEVES GOMES RAMALHO</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor efetivo</h2>
+                                        <hr>
+                                        <p class="cardOne">Graduada</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>JANE TERESINHA LUSTOSA RODRIGUES</h2>
                                 </div>
                             </div>
                             <div class="card">
@@ -137,7 +144,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>08</h2>
+                                    <h2>JULIA GABRIELA MONTEIRO GATO</h2>
                                 </div>
                             </div>
                             <div class="card">
@@ -148,7 +155,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>09</h2>
+                                    <h2>LUCIMARA MACHADO TEIXEIRA TOGNIN</h2>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +170,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>10</h2>
+                                    <h2>MARCOS RODRIGUES MARQUES DE AGUIAR</h2>
                                 </div>
                             </div>
                             <div class="card">
@@ -174,7 +181,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>11</h2>
+                                    <h2>MILENE CILÉIA SOUZA CALAZANS</h2>
                                 </div>
                             </div>
                             <div class="card">
@@ -185,7 +192,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>12</h2>
+                                    <h2>REGIANE DOS SANTOS CARVALHO FUNK</h2>
                                 </div>
                             </div>
                         </div>
@@ -200,7 +207,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>13</h2>
+                                    <h2>RENATA FRANCISCA DE CAMARGO</h2>
                                 </div>
                             </div>
                             <div class="card">
@@ -211,7 +218,7 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>14</h2>
+                                    <h2>RENATO ALEXANDER PONCIANO</h2>
                                 </div>
                             </div>
                             <div class="card">
@@ -222,7 +229,44 @@
                                     </div>
                                 </div>
                                 <div class="face face2">
-                                    <h2>15</h2>
+                                    <h2>ROSANGELA PINHEIRO LEANDRO</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <div class="container">
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardOne">Professor 13</h2>
+                                        <p class="cardOne">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam sit exercitationem itaque voluptas accusantium repellendus! Laudantium, ullam! Dolor sint laudantium ab obcaecati illo nulla doloribus dicta aut rem, quas nam.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>ROSANÍ MIDIOTE CLARO RODRIGUES</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardTwo">Professor 14</h2>
+                                        <p class="cardTwo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque dicta placeat maiores, totam esse excepturi exercitationem, voluptates iste explicabo veritatis quod earum odit dolorum quas molestiae consequuntur vitae dolores ex.</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>ROSEMEIRE DA SILVA ALMEIDA</h2>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="face face1">
+                                    <div class="content">
+                                        <h2 class="cardThree">Professor 15</h2>
+                                        <p class="cardThree">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id minus alias officiis hic vitae inventore harum aliquid dolore. Labore iure dicta iusto ipsum aspernatur voluptates consectetur officiis, modi pariatur aliquid!</p>
+                                    </div>
+                                </div>
+                                <div class="face face2">
+                                    <h2>TATIANA MICENE SOUSA LOBO</h2>
                                 </div>
                             </div>
                         </div>
