responsividade no calendario, inicio do cardapio

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 </ul>
             </header>
             <nav>
+                <span class="menu-toggle">☰</span>
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
@@ -39,7 +40,6 @@
                         <li><a href="projetos.html">PROJETOS</a></li>
                         <li><a href="transparencia.html">TRANSPARÊNCIA</a></li>
                         <li><a href="contato.html">CONTATO</a></li>
-                </ul>
                     </ul>
                 </aside>
                 <article>
