--- a/cardapio.html
+++ b/cardapio.html
@@ -17,6 +17,7 @@
                 </ul>
             </header>
             <nav>
+                <span class="menu-toggle">☰</span>
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
@@ -28,31 +29,98 @@
                     <li><a href="contato.html">CONTATO</a></li>
                 </ul>
             </nav>
-            <main>
-                <aside id="sideBar">
-                    <ul id="sideBarMenu">
-                        <li><a href="index.html">INÍCIO</a></li>
-                        <li><a href="professores.html">CORPO DOCENTE</a></li>
-                        <li><a href="funcionarios.html">QUADRO DE FUNCIONÁRIOS</a></li>
-                        <li><a href="cardapio.html">CARDÁPIO</a></li>
-                        <li><a href="calendario.html">CALENDÁRIO ESCOLAR</a></li>
-                        <li><a href="projetos.html">PROJETOS</a></li>
-                        <li><a href="transparencia.html">TRANSPARÊNCIA</a></li>
-                        <li><a href="contato.html">CONTATO</a></li>
-                </ul>
-                    </ul>
-                </aside>
-                <article>
+            <main class="mainCardapio">
+                <article class="articleCardapio">
                     <section>
-                        <h1>CARDAPIO</h1>
+                        <div class="rope">
+                            <img src="https://notbigmuzzy.github.io/codepen/example1/rope.png" class="rope-left">
+                            <img src="https://notbigmuzzy.github.io/codepen/example1/rope.png" class="rope-right">
+                        </div>
+                        <div class="page1 page">
+                            <img src="https://notbigmuzzy.github.io/codepen/example1/plate1.png" class="plate1">
+                            <div class="body-wrap">
+                                <h1 class="page1-title">M E N U</h1>
+                                <div class="page1-desc">
+                                    <h3>SEPTEMBAR 9</h3>
+                                    <br>
+                                    <hr>
+                                    <br>
+                                    <p>Today, our chef will take you on a travel around the world, with an entry from Europe, our best American meat and an authentic dessert from Asia.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page2 page">
+                            <img src="https://notbigmuzzy.github.io/codepen/example1/grapes.png" class="grapes">
+                            <div class="body-wrap">
+                                <div class="pg2-middle-wrap">
+                                    <div class="pg2-green-back"></div>
+                                    <div class="pg2-white-desc">
+                                        <hr class="hr1">
+                                        <h3>APPETIZERS</h3>
+                                        <hr class="hr2">
+                                        <hr class="hr3">
+                                        <h2>WINE & BRIE</h2>
+                                        <hr class="hr4">
+                                        <hr class="hr5">
+                                        <p>Our most delicious selection of cheeses with wide ranges of wine from our cellar.</p>
+                                        <hr class="hr6">
+                                    </div>
+                                    <div class="pg2-photo-wrap">
+                                        <div class="pg2-photo"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page3 page">
+                            <img src="https://notbigmuzzy.github.io/codepen/example1/leafs.png" class="leafs">
+                            <div class="body-wrap">
+                                <div class="pg3-middle-wrap">
+                                    <div class="pg3-red-back"></div>
+                                    <div class="pg3-photo-wrap">
+                                        <div class="pg3-photo"></div>
+                                    </div>
+                                    <div class="pg3-white-desc">
+                                        <hr class="hr1">
+                                        <h3>FROM THE GRILL</h3>
+                                        <hr class="hr2">
+                                        <hr class="hr3">
+                                        <h2>BEEF STEAK</h2>
+                                        <hr class="hr4">
+                                        <hr class="hr5">
+                                        <p>Aged for extra flavor & tenderness. Rubbed with our unique blend of spices and slow roasted.</p>
+                                        <hr class="hr6">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page4 page">
+                            <img src="https://notbigmuzzy.github.io/codepen/example1/dessert.png" class="dessert">
+                            <div class="body-wrap">
+                                <div class="pg4-middle-wrap">
+                                    <div class="pg4-bezh-back"></div>
+                                    <div class="pg4-white-desc">
+                                        <hr class="hr1">
+                                        <h3>DESERT</h3>
+                                        <hr class="hr2">
+                                        <hr class="hr3">
+                                        <h2>THAI MANGO</h2>
+                                        <hr class="hr4">
+                                        <hr class="hr5">
+                                        <p>This wonderful and authentic Thai dessert comes with a sweet, sticky rice and a special dressing.</p>
+                                        <hr class="hr6">
+                                    </div>
+                                    <div class="pg4-photo-wrap">
+                                        <div class="pg4-photo"></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="page5 page">
+                            <div class="body-wrap">
+                                <h3>GLUTEN FREE & VEGAN AVAILABLE</h3>
+                            </div>
+                        </div>                        
                     </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
-                    </section>
-                    
                 </article>
             </main>
             <footer>
@@ -76,4 +144,5 @@
             </footer>
         </body>
         <script src="js/script.js"></script>
+        <script src="js/cardapioScript.js"></script>
     </html>
