--- a/contato.html
+++ b/contato.html
@@ -17,6 +17,7 @@
                 </ul>
             </header>
             <nav>
+                <span class="menu-toggle">☰</span>
                 <ul class="navBar">
                     <li><a href="index.html">INÍCIO</a></li>
                     <li><a href="professores.html">CORPO DOCENTE</a></li>
