inserção dinamica do cardapio com JSON

--- a/cardapio.html
+++ b/cardapio.html
@@ -41,11 +41,13 @@
                             <div class="body-wrap">
                                 <h1 class="page1-title">M E N U</h1>
                                 <div class="page1-desc">
-                                    <h3>SEPTEMBAR 9</h3>
+                                    <h3>13 de Novembro</h3>
                                     <br>
                                     <hr>
                                     <br>
-                                    <p>Today, our chef will take you on a travel around the world, with an entry from Europe, our best American meat and an authentic dessert from Asia.</p>
+                                    <p>O cardápio das EMEBs e CRECHES é definido pela equipe da Divisão de Gestão de Políticas Públicas da Alimentação Escolar.</p>
+                                    <p>O cardápio do dia pode sofrer alterações dependendo da disponibilidade dos itens de preparo</p>
+                                    <p>As imagens são meramente ilustrativas</p>
                                 </div>
                             </div>
                         </div>
@@ -56,13 +58,12 @@
                                     <div class="pg2-green-back"></div>
                                     <div class="pg2-white-desc">
                                         <hr class="hr1">
-                                        <h3>APPETIZERS</h3>
+                                        <h3>DESJEJUM</h3>
                                         <hr class="hr2">
                                         <hr class="hr3">
-                                        <h2>WINE & BRIE</h2>
                                         <hr class="hr4">
                                         <hr class="hr5">
-                                        <p>Our most delicious selection of cheeses with wide ranges of wine from our cellar.</p>
+                                        <p></p>
                                         <hr class="hr6">
                                     </div>
                                     <div class="pg2-photo-wrap">
@@ -81,13 +82,13 @@
                                     </div>
                                     <div class="pg3-white-desc">
                                         <hr class="hr1">
-                                        <h3>FROM THE GRILL</h3>
+                                        <h3>ALMOÇO</h3>
                                         <hr class="hr2">
                                         <hr class="hr3">
-                                        <h2>BEEF STEAK</h2>
+                                        <h2></h2>
                                         <hr class="hr4">
                                         <hr class="hr5">
-                                        <p>Aged for extra flavor & tenderness. Rubbed with our unique blend of spices and slow roasted.</p>
+                                        <p></p>
                                         <hr class="hr6">
                                     </div>
                                 </div>
@@ -100,13 +101,11 @@
                                     <div class="pg4-bezh-back"></div>
                                     <div class="pg4-white-desc">
                                         <hr class="hr1">
-                                        <h3>DESERT</h3>
+                                        <h3>SOBREMESA</h3>
                                         <hr class="hr2">
                                         <hr class="hr3">
-                                        <h2>THAI MANGO</h2>
+                                        <h2></h2>
                                         <hr class="hr4">
-                                        <hr class="hr5">
-                                        <p>This wonderful and authentic Thai dessert comes with a sweet, sticky rice and a special dressing.</p>
                                         <hr class="hr6">
                                     </div>
                                     <div class="pg4-photo-wrap">
@@ -117,7 +116,7 @@
                         </div>
                         <div class="page5 page">
                             <div class="body-wrap">
-                                <h3>GLUTEN FREE & VEGAN AVAILABLE</h3>
+                                <h3>CARDÁPIO PARA INTOLERANTES A LACTOSE</h3>
                             </div>
                         </div>                        
                     </section>
