--- a/cardapio.html
+++ b/cardapio.html
@@ -41,11 +41,15 @@
                             <div class="body-wrap">
                                 <h1 class="page1-title">M E N U</h1>
                                 <div class="page1-desc">
-                                    <h3>13 de Novembro</h3>
+                                    <h3 class="currentDay"> 
+                                        <button id="prevDay" aria-label="Dia anterior">&lt;</button>
+                                        <span id="day">14</span> de <span id="mouth">Novembro</span> 
+                                        <button id="nextDay" aria-label="Dia seguinte">&gt;</button>
+                                    </h3>
                                     <br>
                                     <hr>
                                     <br>
-                                    <p>O cardápio das EMEBs e CRECHES é definido pela equipe da Divisão de Gestão de Políticas Públicas da Alimentação Escolar.</p>
+                                    <p>O <a href="https://drive.google.com/drive/folders/1XatPlXdx48UtT_xStuwUiQJL4YZPJGkP?usp=sharing" target="_blank">cardápio das EMEBs e CRECHES</a> é definido pela equipe da Divisão de Gestão de Políticas Públicas da Alimentação Escolar.</p>
                                     <p>O cardápio do dia pode sofrer alterações dependendo da disponibilidade dos itens de preparo</p>
                                     <p>As imagens são meramente ilustrativas</p>
                                 </div>
@@ -56,16 +60,7 @@
                             <div class="body-wrap">
                                 <div class="pg2-middle-wrap">
                                     <div class="pg2-green-back"></div>
-                                    <div class="pg2-white-desc">
-                                        <hr class="hr1">
-                                        <h3>DESJEJUM</h3>
-                                        <hr class="hr2">
-                                        <hr class="hr3">
-                                        <hr class="hr4">
-                                        <hr class="hr5">
-                                        <p></p>
-                                        <hr class="hr6">
-                                    </div>
+                                    <div class="pg2-white-desc"></div>
                                     <div class="pg2-photo-wrap">
                                         <div class="pg2-photo"></div>
                                     </div>
@@ -80,17 +75,7 @@
                                     <div class="pg3-photo-wrap">
                                         <div class="pg3-photo"></div>
                                     </div>
-                                    <div class="pg3-white-desc">
-                                        <hr class="hr1">
-                                        <h3>ALMOÇO</h3>
-                                        <hr class="hr2">
-                                        <hr class="hr3">
-                                        <h2></h2>
-                                        <hr class="hr4">
-                                        <hr class="hr5">
-                                        <p></p>
-                                        <hr class="hr6">
-                                    </div>
+                                    <div class="pg3-white-desc"></div>
                                 </div>
                             </div>
                         </div>
@@ -99,15 +84,7 @@
                             <div class="body-wrap">
                                 <div class="pg4-middle-wrap">
                                     <div class="pg4-bezh-back"></div>
-                                    <div class="pg4-white-desc">
-                                        <hr class="hr1">
-                                        <h3>SOBREMESA</h3>
-                                        <hr class="hr2">
-                                        <hr class="hr3">
-                                        <h2></h2>
-                                        <hr class="hr4">
-                                        <hr class="hr6">
-                                    </div>
+                                    <div class="pg4-white-desc"></div>
                                     <div class="pg4-photo-wrap">
                                         <div class="pg4-photo"></div>
                                     </div>
