feriados 2025, projetos dinamico, estilização

--- a/projetos.html
+++ b/projetos.html
@@ -43,16 +43,7 @@
                 </ul>
                     </ul>
                 </aside>
-                <article>
-                    <section>
-                        <h1>PROJETOS</h1>
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
-                    </section>
-                    <section>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex asperiores dolores dolore nisi, nobis cum natus porro qui non est, libero perspiciatis ab fugiat ut, assumenda iure maxime earum aperiam.
-                    </section>
+                <article id="projectsArticle">
                     
                 </article>
             </main>
@@ -77,4 +68,5 @@
             </footer>
         </body>
         <script src="js/script.js"></script>
+        <script src="js/projectScript.js"></script>
     </html>
