edicao pagina incial

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             </nav>
             <main>
                 <article>
-                    <section>
-                        <h1>INICIO</h1>
+                    <section class="indexBanner">
+                        
                     </section>
                     <section>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio obcaecati voluptate accusantium molestias vero. Molestiae mollitia, obcaecati similique consequuntur maiores veniam exercitationem dolorem molestias, velit nostrum culpa necessitatibus rem officiis?
